--- a/config/locales/blacklight.en.yml
+++ b/config/locales/blacklight.en.yml
@@ -178,7 +178,7 @@ en:
       documents:
         counter: '%{counter}. '
       facets:
-        title: 'Limit your search'
+        title: 'Refine'
         sort:
           count: 'Numerical Sort'
           index: 'A-Z Sort'
