--- a/config/locales/blacklight.en.yml
+++ b/config/locales/blacklight.en.yml
@@ -233,5 +233,11 @@ en:
       back_to_item: '« Back to Item View'
       unavailable: 'Virtual Shelf browse is unavailable from this record'
       unavailable_description: 'Items which are not (or not yet) associated with a shelving location cannot be used to launch a virtual shelf browse view.'
+      
+    scoped:
+      title: Scoped Search
+      custom: Custom Search
+      
+      
 
 
